--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <title>Rishikesh Joshi</title>
-    
+
 </head>
 
 <body>
@@ -100,16 +100,18 @@
         <div id="SkillsTitle"></div>
         <br>
         <br>
+        <br>
         <section class="text-black-700 body-font">
             <div class="container px-5 py-24 mx-auto">
+            <div id="skillsText" class="neumorphic-shadow-text p-6">
                 <div class="flex flex-col text-center w-full mb-20">
-                    <span class="ml-3 text-xl" style="font-size: 40px;"><u>My Skills</u></span>
+                    <span class="ml-3 text-xl" style="font-size: 40px;"><u class="" style="padding-left: 15px; padding-right: 15px;">My Skills</u></span>
                 </div>
                 <div class="flex flex-wrap -m-2">
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border p-4 rounded-lg">
+                        <div class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/androidLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-large"><b>Android</b></h2>
@@ -120,9 +122,9 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center p-4 border rounded-lg">
+                        <div class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/pythonLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Python</b></h2>
@@ -133,9 +135,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/MERN.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Full Stack Developer</b></h2>
@@ -145,10 +148,11 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="src/linuxLogo.jpg">
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                src="src/linuxLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Linux</b></h2>
                                 <p class="text-black-500">I love linux. I have experimented with almost all of their
@@ -158,9 +162,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/gitLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Git</h2>
@@ -170,9 +175,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="neumorphic-shadow-text w-16 h-16 object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/kotlinLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Kotlin</h2>
@@ -182,9 +188,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 neumorphic-shadow-image object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="w-16 h-16 neumorphic-shadow-text object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/dartLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Dart</h2>
@@ -195,9 +202,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 neumorphic-shadow-image object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="w-16 h-16 neumorphic-shadow-text object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/java.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Java</h2>
@@ -208,9 +216,10 @@
                         </div>
                     </div>
                     <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                        <div
+                            class="neumorphic-shadow-image h-full flex items-center p-4 rounded-lg">
                             <img alt="skill"
-                                class="w-16 h-16 neumorphic-shadow-image object-cover object-center flex-shrink-0 rounded-full mr-4"
+                                class="w-16 h-16 neumorphic-shadow-text object-cover object-center flex-shrink-0 rounded-full mr-4"
                                 src="src/rubiksCube.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Speedcuber</h2>
@@ -221,6 +230,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
         </section>
         <div id="contact"></div>
@@ -235,35 +245,35 @@
                     </div>
                     <div class="flex flex-wrap -m-4 justify-center">
                         <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
-                            <div class="neumorphic-shadow-image bg-gray-100 p-6 rounded-lg border-black-700">
+                            <div class="neumorphic-shadow-image p-6 rounded-lg border-black-700">
                                 <img class="h-40 rounded w-full object-cover object-center mb-6"
                                     src="src/githubLogo.png" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center">
+                                <h3 class="tracking-widest text-black text-xs font-medium title-font text-center">
                                     <a href="https://github.com/Creatune" target="_blank">Visit</a></h3>
                             </div>
                         </div>
                         <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
-                            <div class="neumorphic-shadow-image bg-gray-100 p-6 rounded-lg">
+                            <div class="neumorphic-shadow-image p-6 rounded-lg">
                                 <img class="h-40 rounded w-full object-cover object-center mb-6"
                                     src="src/facebookLogo.jpeg" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center">
+                                <h3 class="tracking-widest text-black text-xs font-medium title-font text-center">
                                     <a href="https://www.facebook.com/profile.php?id=100011425792712"
                                         target="_blank">Visit</a></h3>
                             </div>
                         </div>
                         <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
-                            <div class="neumorphic-shadow-image bg-gray-100 p-6 rounded-lg">
+                            <div class="neumorphic-shadow-image p-6 rounded-lg">
                                 <img class="h-40 rounded w-full object-cover object-center mb-6"
                                     src="src/instagramLogo.jpeg" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center">
+                                <h3 class="tracking-widest text-black text-xs font-medium title-font text-center">
                                     <a href="https://www.instagram.com/rjoshi869/?hl=en" target="_blank">Visit</a></h3>
                             </div>
                         </div>
                         <div class="xl:w-1/4 md:w-1/2 p-4 w-screen">
-                            <div class="neumorphic-shadow-image bg-gray-100 p-6 rounded-lg">
+                            <div class="neumorphic-shadow-image p-6 rounded-lg">
                                 <img class="h-40 rounded w-full object-cover object-center mb-6"
-                                    src="src/linkedinLogo.jpeg" alt="contact">
-                                <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center">
+                                    src="src/linkedinLogo.png" alt="contact">
+                                <h3 class="tracking-widest text-black text-xs font-medium title-font text-center">
                                     <a href="https://www.linkedin.com/in/rishikesh-joshi-46a8961a5/"
                                         target="_blank">Visit</a></h3>
                             </div>
