--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                                     class="neumorphic-shadow-btn" href="#AboutTitle">About</a></li>
                             <li class="block mt-3 lg:inline-block lg:mt-0 text-black mr-4 mb-4"><a id="skillsBtn"
                                     class="neumorphic-shadow-btn" href="#SkillsTitle">Skills</a></li>
+                            <li class="block mt-3 lg:inline-block lg:mt-0 text-black mr-4 mb-4"><a id="skillsBtn"
+                                class="neumorphic-shadow-btn" href="#GCITitle">GCI</a></li>
                             <li class="block mt-3 lg:inline-block lg:mt-0 text-black mr-4 mb-4"><a id="contactBtn"
                                     class="neumorphic-shadow-btn" href="#contact">Contact</a></li>
                         </ul>
@@ -233,6 +235,75 @@
                 </div>
                 </div>
         </section>
+        <div id="GCITitle"></div>
+        <br>
+        <br>
+        <br>
+        <section class="text-gray-700 body-font">
+            <div class="container px-5 py-24 mx-auto">
+                <div id="GCIText" class="neumorphic-shadow-text p-6" style="border-radius: 20px;">
+                    <div class="flex flex-col text-center w-full mb-20" style="color: black">
+                        <span class="ml-3 text-xl" style="font-size: 40px;"><u>Google Code-in</u></span>
+                    </div>
+                    <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+                        <div class="sm:w-1/2 mb-10 px-4">
+                            <div class="rounded-lg overflow-hidden neumorphic-shadow-image p-3">
+                            <img alt="content" class="rounded-lg object-cover object-center h-full w-full" src="src/gci18.jpg">
+                            </div>
+                            <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Fedora Project 2018-19</h2>
+                            <h3 class="title-font text-2xl font-medium text-gray-800 mt-6">Tasks</h3>
+                            <p class="leading-relaxed text-base">
+                                <ul>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5117098728620032/" target="_blank">[Bassa] Fork and Clone the project</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5004091226849280/" target="_blank">[OpenSNA] Fork and Clone OpenSNA</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5038947033939968/" target="_blank">[GoCloud] Star gocloud project repository</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6480385370226688/" target="_blank">[Git] Git upstream branches</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/4912490781605888/" target="_blank">[CLocal Azure] Setup CLocal Azure Project</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5891753592750080/" target="_blank">Install jenkins in a container</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5383013978341376/" target="_blank">Create 2 Fedora VMs using Vagrant</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6588847253094400/" target="_blank">Write Ansible Roles to Install and Update Packages</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/4884463502753792/" target="_blank">Write a Blog about YAML Files (explanation and syntax)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/4976917941846016/" target="_blank">Write a Blog explaining the steps to Execute a Shell Script from Jenkins</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5668091023327232/" target="_blank">Execute an Ansible Playbook from Jenkins Using Ansible Plugin</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/4796217158533120/" target="_blank">Think of an idea to automate a boring job (using Ansible)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6508913885184000/" target="_blank">Write a Blog Post About 5 of Your Favorite Vim Plugins</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5422097979408384/" target="_blank">Download and Verify Fedora Image on Linux</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6508913885184000/" target="_blank">Write a Review About your Favorite Fedora Spin</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6655956653965312/" target="_blank">Blog Post with Steps for Running Tensorflow on Fedora</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/6332446094131200/" target="_blank">Blog Post with Steps for Running OpenCV on Fedora</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2018/task/5708129178222592/" target="_blank">Automate Release Validation in Fedora</a></li>
+                                </ul>
+                            </p>
+                        </div>
+                        <div class="sm:w-1/2 mb-10 px-4">
+                            <div class="rounded-lg overflow-hidden neumorphic-shadow-image p-3">
+                                <img alt="content" class="rounded-lg object-cover object-center h-full w-full" src="src/gci19.png">
+                            </div>
+                            <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">Sugar Labs 2019</h2>
+                            <h3 class="title-font text-2xl font-medium text-gray-800 mt-6">Tasks</h3>
+                            <p class="leading-relaxed text-base">
+                                <ul>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/6501227104305152/" target="_blank">Set up Sugar Desktop</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5707507014565888/" target="_blank">Make a Pull Request</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5409881618644992/" target="_blank">Sugarizer: Complete the Development Tutorial</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5767143166050304/" target="_blank">Port to Python 3 (1 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5181809392877568/" target="_blank">Port to Python 3 (2 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5050669076054016/" target="_blank">Port to Python 3 (6 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/6636542800429056/" target="_blank">Port to Python 3 (4 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/6391006767874048/" target="_blank">Port to Python 3 (7 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/4717669457068032/" target="_blank">Port to Python 3 (3 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/4716159843172352/" target="_blank">Port to Python 3 (5 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5744759346298880/" target="_blank">Port from GObject to GLib (1 of 3)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/4512568125685760/" target="_blank">Port from GStreamer Gst.Message.structure to get_structure() (1 of 3)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/6119756625608704/" target="_blank">Port to Python 3 (9 of 12)</a></li>
+                                    <li><a href="https://codein.withgoogle.com/archive/2019/task/5809848965398528/" target="_blank">Port to Python 3 (12 of 12)</a></li>
+                                </ul>
+                        </div>
+                </div>
+            
+            </div>
+        </section>
+
         <div id="contact"></div>
         <br>
         <br>
