--- a/website/index.html
+++ b/website/index.html
@@ -86,8 +86,7 @@
                 <div id="aboutText" class="neumorphic-shadow-text p-6 xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
                     <span class="ml-3 text-xl" style="font-size: 40px;"><u>About</u></span>
                     <br><br><br><br>
-                    <p class="leading-relaxed text-lgs p-6">Hi! I am Rishikesh Joshi. I am currently a senior in high
-                        school,
+                    <p class="leading-relaxed text-lgs p-6">Hi! I am Rishikesh Joshi. I am currently a computer science freshman at the University of Minnesota--Twin Cities                 school,
                         and I love coding. I was first introduced to coding by a contest called Google Code-in which was
                         about
                         contributing to open source organisations and help solve their problems through code. The
